<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/sender_id_label" />

        <EditText android:id="@+id/sender_id"
            android:layout_weight="0.65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:text="@string/string_identifier_label" />

        <EditText android:id="@+id/string_identifier"
            android:layout_weight="0.65"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:editable="false"
        android:textColor="#010101"
        android:layout_gravity="right" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button android:id="@+id/register_button"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:elevation="5dp"
            android:layout_marginTop="8dp" />
        <Button android:id="@+id/unregister_button"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_unregister"
            android:layout_marginTop="8dp"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/pubsub_prefix_label"
            android:enabled="false"/>
        <EditText android:id="@+id/topic_name"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pubsub_topic_label"
            android:enabled="false"/>
        <Button android:id="@+id/topic_subscribe"
            android:layout_weight="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_subscribe"
            android:elevation="5dp"
            android:layout_marginTop="8dp"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <EditText android:id="@+id/upstream_message"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upstream_message_label"
            android:enabled="false"/>
        <Button android:id="@+id/button_send"
            android:layout_weight="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:elevation="5dp"
            android:layout_marginTop="8dp"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:editable="false"
            android:textColor="#010101" />

        <TextView android:id="@+id/registeration_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:editable="false"
            android:textColor="#010101" />

        <TextView android:id="@+id/downstream_bundle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp"
            android:background="#ffffff"
            android:editable="false"
            android:textColor="#010101" />

    </LinearLayout>

</LinearLayout>
